@@ -1,3 +1,8 @@
+2009-04-22  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/enum2.adb: New test.
+	* gnat.dg/enum2_pkg.ads: New helper.
+
 2009-04-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/39855
